--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
         <!---------------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="clients" class="clients">
             <div class="titreClients">
-                <h2 class="titreclients">Besoin d’un accompagnement renforcé?</h2>
+                <h2 id="titreCollab" class="titreclients">Besoin d’un accompagnement renforcé?</h2>
                 <p class="texteclients">Profitez de mon savoir faire et bénéfieciez d’un accompagnement renforcé sur de nombreux outils tel que EXCEL, PowerBI, <br>Office365</p>
             </div>
             <div class="clientsdeux">
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formdist.jpg" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
-                    <p class="textecollaborateur"> Accompagnement à distance</p>
+                    <p id="collab1" class="textecollaborateur"> Accompagnement à distance</p>
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formgroup.jpg" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
-                    <p class="textecollaborateur"> Accompagnement en équipe</p>
+                    <p id="collab2" class="textecollaborateur"> Accompagnement en équipe</p>
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formun.jpg" alt="un collaborateur suivant une formation individuel.">
-                    <p class="textecollaborateur"> Accompagnement individuel</p>
+                    <p id="collab3" class="textecollaborateur"> Accompagnement individuel</p>
                 </div>
             </div>
         </section>
@@ -131,7 +131,7 @@
         <!-----------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section class="enSavoirPlus">
             <div class="elementEnSavoirPus">
-                <h2 class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie avec une Assistante Virtuelle !</h2>
+                <h2 id="engagezLassistance" class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie avec une Assistante Virtuelle !</h2>
                 <p class="soustitreEnSavoirPlus"><em>Êtes-vous prêt à libérer votre entreprise des contraintes administratives pour vous <br>concentrer sur la croissance? En tant qu'Assistante Virtuelle spécialisée, je vous offre une <br>expertise pointue dans plusieurs domaines clés.</em></p>
             </div>
             <div class="description">
@@ -171,11 +171,11 @@
                 <div class="titreProjets">
                     <h2 class="titreElementProjets">Quelques réalisations</h2>
                 </div>
-                <div class="divImageElementProjets">
+                <div id="divImageElementProjets" class="divImageElementProjets">
                     <img class="imageElementProjets" src="./image/creativite.jpg" alt="image représentant la créativité">
                 </div>
             </div>
-            <h2 class="titreElementProjets">Web</h2>
+            <h2 id="titreWeb" class="titreElementProjets">Web</h2>
             <div class="elementProjetsDeux">
                 <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
                     <h3 class="titreLienProjet"> Reservia</h3>
@@ -193,26 +193,26 @@
                     <p class="SuivrelienProjet">></p>
                 </a>
             </div>
-            < <h2 class="titreElementProjets">Analyses</h2>
-                <div class="elementProjetsDeux">
-                    <a class="lienProjet" href="https://drive.google.com/file/d/19jFd8icc3hCXYp9ANr62PJMAvhpHvE6P/view?usp=sharing" target="_blank">
-                        <h3 class="titreLienProjet"> Budget du foyer</h3>
-                        <p class="texteLienProjet">Analyse des ressources et des dépenses d'un foyer, accompagnée de recommandations pour élaborer un plan visant à réaliser des économies.</p>
-                        <p class="SuivrelienProjet">></p>
-                    </a>
-                    <a class="lienProjet" href="https://drive.google.com/file/d/1EvzhbJwS7A6eAmKD42haVc8d_cpl2wDH/view?usp=sharing" target="_blank">
-                        <h3 class="titreLienProjet"> Fichier de caisse</h3>
-                        <p class="texteLienProjet">récapitulatif des transactions financières, telles que les ventes, les paiements et les remboursements, pour assurer le suivi précis des mouvements monétaires.</p>
-                        <p class="SuivrelienProjet">></p>
-                    </a>
-                </div>
+            <h2 id="titreAnalyses" class="titreElementProjets">Analyses</h2>
+            <div class="elementProjetsDeux">
+                <a class="lienProjet" href="https://drive.google.com/file/d/19jFd8icc3hCXYp9ANr62PJMAvhpHvE6P/view?usp=sharing" target="_blank">
+                    <h3 class="titreLienProjet"> Budget du foyer</h3>
+                    <p class="texteLienProjet">Analyse des ressources et des dépenses d'un foyer, accompagnée de recommandations pour élaborer un plan visant à réaliser des économies.</p>
+                    <p class="SuivrelienProjet">></p>
+                </a>
+                <a class="lienProjet" href="https://drive.google.com/file/d/1EvzhbJwS7A6eAmKD42haVc8d_cpl2wDH/view?usp=sharing" target="_blank">
+                    <h3 class="titreLienProjet"> Fichier de caisse</h3>
+                    <p class="texteLienProjet">récapitulatif des transactions financières, telles que les ventes, les paiements et les remboursements, pour assurer le suivi précis des mouvements monétaires.</p>
+                    <p class="SuivrelienProjet">></p>
+                </a>
+            </div>
 
 
         </section>
         <!-------------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="contacts" class="contacts">
             <div class="elementContacts">
-                <h2 class="titreContacts">Travaillons ensemble!</h2>
+                <h2 id="travaillonsEnsemble" class="titreContacts">Travaillons ensemble!</h2>
                 <img class="imageElementContacts" src="./image/team.jpg" alt="une image de cohésion d'équipe">
                 <p class="texteElementContacts">#Informatique #Immobilier #Finance</p>
             </div>
