mis à jour des liens projets

--- a/index.html
+++ b/index.html
@@ -176,37 +176,52 @@
                 </div>
             </div>
             <h2 id="titreWeb" class="titreElementProjets">Web</h2>
-            <div class="elementProjetsDeux">
-                <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
+            <div class="clientsdeux">
+                <a class="imageCollaborateur " href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
+                    <img class="collab" src="./image/reservia.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
                     <h3 class="titreLienProjet"> Reservia</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
-                    <p class="SuivrelienProjet">></p>
                 </a>
-                <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
+                <a class="imageCollaborateur " href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
+                    <img class="collab " src="./image/ohmyfood.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
                     <h3 class="titreLienProjet"> Oh my food!</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de commande en ligne compatible tout support avec animation au survol.</p>
-                    <p class="SuivrelienProjet">></p>
                 </a>
-                <a class="lienProjet" href="https://liyanasc.github.io/pat-et-jo/#/" target="_blank">
+                <a class="imageCollaborateur" href="https://liyanasc.github.io/pat-et-jo/#/" target="_blank">
+                    <img class="collab" src="./image/patetjo.png" alt="un collaborateur suivant une formation individuel.">
                     <h3 class="titreLienProjet"> Pat et Jo</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
-                    <p class="SuivrelienProjet">></p>
-                </a>
-            </div>
-            <h2 id="titreAnalyses" class="titreElementProjets">Analyses</h2>
-            <div class="elementProjetsDeux">
-                <a class="lienProjet" href="https://drive.google.com/file/d/19jFd8icc3hCXYp9ANr62PJMAvhpHvE6P/view?usp=sharing" target="_blank">
-                    <h3 class="titreLienProjet"> Budget du foyer</h3>
-                    <p class="texteLienProjet">Analyse des ressources et des dépenses d'un foyer, accompagnée de recommandations pour élaborer un plan visant à réaliser des économies.</p>
-                    <p class="SuivrelienProjet">></p>
-                </a>
-                <a class="lienProjet" href="https://drive.google.com/file/d/1EvzhbJwS7A6eAmKD42haVc8d_cpl2wDH/view?usp=sharing" target="_blank">
-                    <h3 class="titreLienProjet"> Fichier de caisse</h3>
-                    <p class="texteLienProjet">récapitulatif des transactions financières, telles que les ventes, les paiements et les remboursements, pour assurer le suivi précis des mouvements monétaires.</p>
-                    <p class="SuivrelienProjet">></p>
                 </a>
             </div>
 
+            <h2 id="titreAnalyses" class="titreElementProjets">Analyses</h2>
+            <div class="clientsdeux">
+                <a class="imageCollaborateur " href="https://drive.google.com/file/d/19jFd8icc3hCXYp9ANr62PJMAvhpHvE6P/view?usp=sharing" target="_blank">
+                    <img class="collab" src="./image/foyer.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                    <h3 class="titreLienProjet"> Budget du foyer</h3>
+                    <p class="texteLienProjet">Analyse des ressources et des dépenses d'un foyer, accompagnée de recommandations pour élaborer un plan visant à réaliser des économies.</p>
+                </a>
+                <a class="imageCollaborateur " href="https://drive.google.com/file/d/1EvzhbJwS7A6eAmKD42haVc8d_cpl2wDH/view?usp=sharing" target="_blank">
+                    <img class="collab " src="./image/Caisse.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
+                    <h3 class="titreLienProjet"> Fichier de caisse</h3>
+                    <p class="texteLienProjet">récapitulatif des transactions financières, telles que les ventes, les paiements et les remboursements, pour assurer le suivi précis des mouvements monétaires.</p>
+                </a>
+            </div>
+
+
+            <h2 id="titreFormation" class="titreElementProjets">Formations</h2>
+            <div class="clientsdeux">
+                <a class="imageCollaborateur " href="https://www.liyanadev.fr/" target="_blank">
+                    <img class="collab" src="./image/assistantenumerique.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                    <h3 class="titreLienProjet">Formation Développeur Front-End</h3>
+                    <p class="texteLienProjet">formation axée sur le développement front-end et l'utilisation de GitHub, centrée sur le projet de refonte complète de mon site web, destinée à un futur étudiant dans le cadre d'une reconversion professionnelle.</p>
+                </a>
+                <a class="imageCollaborateur " href="https://nivmarcellin.my.canva.site/" target="_blank">
+                    <img class="collab " src="./image/marscanva.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
+                    <h3 class="titreLienProjet"> Formation Canva</h3>
+                    <p class="texteLienProjet">formation sur l'utilisation de Canva dans le cadre d'un projet de création de portfolio en ligne, visant à présenter une image plus professionnelle auprès des agences.</p>
+                </a>
+            </div>
 
         </section>
         <!-------------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
