ajout citation client

--- a/index.html
+++ b/index.html
@@ -62,6 +62,81 @@
                 </div>
             </div>
         </section>
+        <!--------------------------------------------------------------------------CITATION-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <section id="citation" class="citation">
+            <blockquote class="elementCitation">
+                <div class="blockclientcitation">
+                    <p class="clientcitation textleft">
+                        "Comment puis-je créer un site internet ? 🤔”
+                    </p>
+                    <p class="clientcitation textcenter">
+                        “J'ai du mal à suivre mes finances! 💵 ”
+                    </p>
+                    <p class="clientcitation textright">
+                        “Je suis perdue quant aux outils numériques qui pourraient m'être utiles. 😩”
+                    </p>
+                    <p class="clientcitation textleft">
+                        “Au secours ! J'ai besoin d'un support administratif ! 🆘 ”
+                    </p>
+                    <p class="clientcitation textcenter">
+                        “Je suis démunie face à Excel... 📉”
+                    </p>
+                    <p class="clientcitation textright">
+                        "Comment organiser efficacement ses emails ?" 📧
+                    </p>
+                    <p class="clientcitation textleft">
+                        "Comment automatiser certaines tâches récurrentes ? "⏳
+                    </p>
+                    <p class="clientcitation textcenter">
+                        "Comment assurer la sécurité de mes données en ligne ?" 🔒
+                    </p>
+                </div>
+
+
+                <p class="textecitation">“<em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial</em>."</p>
+                <footer class="elementCitationDeux">
+                    <p>Votre future Assistante.</p>
+                </footer>
+            </blockquote>
+        </section>
+        <!-----------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <section class="enSavoirPlus">
+            <div class="elementEnSavoirPus">
+                <h2 id="engagezLassistance" class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie avec une Assistante Virtuelle !</h2>
+                <p class="soustitreEnSavoirPlus"><em>Êtes-vous prêt à libérer votre entreprise des contraintes administratives pour vous <br>concentrer sur la croissance? En tant qu'Assistante Virtuelle spécialisée, je vous offre une <br>expertise pointue dans plusieurs domaines clés.</em></p>
+            </div>
+            <div class="description">
+                <div class="descriptionEnSavoirPlus">
+                    <h3 class="titreElementDescription"> Administration Expert :</h3>
+                    <p class="texteElementDescription">Accueil Téléphonique Professionnel.
+                        <br> Suivi de dossiers.<br>Saisie de documents.<br>Gestion proactive des réclamations.<br>Achats et Recouvrement.
+                    </p>
+                    <h3 class="titreElementDescription">Contact Client et Formations <br>Personnalisées :</h3>
+                    <p class="texteElementDescription">Communication fluide et micro-<br>formations sur mesure pour vos <br>besoins spécifiques en accueil et <br>outils numérique tel que Excel, Power BI User, etc...</p>
+                </div>
+                <div>
+                    <img class="imageElementDescription" src="./image/persofemme.png" alt="personnage feminin en animation">
+                </div>
+            </div>
+        </section>
+        <section class="enSavoirPlus">
+            <div class="descriptionDeux">
+                <div>
+                    <img class="imageElementDescriptionDeux" src="./image/explain.png" alt="un personnage qui explique a un autre ">
+                </div>
+                <div class="descriptionEnSavoirPlusDeux">
+                    <h3 class="titreElementDescriptionDeux">Gestion des Données :</h3>
+                    <p class="texteElementDescriptionDeux">Transformez vos données en informations exploitables avec <br>des rapports clairs et précis. Optez pour des analyse <br>approfondie avec des tableaux de bord interactifs et une <br>organisation optimale des informations.</p>
+                    <h3 class="titreElementDescriptionDeux">Polyvalence Informatique :</h3>
+                    <p class="texteElementDescriptionDeux">Créer votre site vitrine,vous orientez vers des outils<br>numériques pertinents.Créer vos contenus.<br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aiderons.</p>
+                </div>
+            </div>
+            <footer class="footerEnSavoirPlus">
+                <p>En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
+                    <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</p>
+            </footer>
+        </section>
+
         <!-----------------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
         <section id="service" class="service">
             <div class="titreService">
@@ -118,52 +193,6 @@
                     <p id="collab3" class="textecollaborateur"> Accompagnement individuel</p>
                 </div>
             </div>
-        </section>
-        <!--------------------------------------------------------------------------CITATION-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-        <section id="citation" class="citation">
-            <blockquote class="elementCitation">
-                <p class="textecitation">“<em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial</em>."</p>
-                <footer class="elementCitationDeux">
-                    <p>Votre future Assistante.</p>
-                </footer>
-            </blockquote>
-        </section>
-        <!-----------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-        <section class="enSavoirPlus">
-            <div class="elementEnSavoirPus">
-                <h2 id="engagezLassistance" class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie avec une Assistante Virtuelle !</h2>
-                <p class="soustitreEnSavoirPlus"><em>Êtes-vous prêt à libérer votre entreprise des contraintes administratives pour vous <br>concentrer sur la croissance? En tant qu'Assistante Virtuelle spécialisée, je vous offre une <br>expertise pointue dans plusieurs domaines clés.</em></p>
-            </div>
-            <div class="description">
-                <div class="descriptionEnSavoirPlus">
-                    <h3 class="titreElementDescription"> Administration Expert :</h3>
-                    <p class="texteElementDescription">Accueil Téléphonique Professionnel.
-                        <br> Suivi de dossiers.<br>Saisie de documents.<br>Gestion proactive des réclamations.<br>Achats et Recouvrement.
-                    </p>
-                    <h3 class="titreElementDescription">Contact Client et Formations <br>Personnalisées :</h3>
-                    <p class="texteElementDescription">Communication fluide et micro-<br>formations sur mesure pour vos <br>besoins spécifiques en accueil et <br>outils numérique tel que Excel, Power BI User, etc...</p>
-                </div>
-                <div>
-                    <img class="imageElementDescription" src="./image/persofemme.png" alt="personnage feminin en animation">
-                </div>
-            </div>
-        </section>
-        <section class="enSavoirPlus">
-            <div class="descriptionDeux">
-                <div>
-                    <img class="imageElementDescriptionDeux" src="./image/explain.png" alt="un personnage qui explique a un autre ">
-                </div>
-                <div class="descriptionEnSavoirPlusDeux">
-                    <h3 class="titreElementDescriptionDeux">Gestion des Données :</h3>
-                    <p class="texteElementDescriptionDeux">Transformez vos données en informations exploitables avec <br>des rapports clairs et précis. Optez pour des analyse <br>approfondie avec des tableaux de bord interactifs et une <br>organisation optimale des informations.</p>
-                    <h3 class="titreElementDescriptionDeux">Polyvalence Informatique :</h3>
-                    <p class="texteElementDescriptionDeux">Créer votre site vitrine,vous orientez vers des outils<br>numériques pertinents.Créer vos contenus.<br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aiderons.</p>
-                </div>
-            </div>
-            <footer class="footerEnSavoirPlus">
-                <p>En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
-                    <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</p>
-            </footer>
         </section>
         <!--------------------------------------------------------------------------PROJETS--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="projets" class="projets">
