--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
             <h2 id="titreFormation" class="titreElementProjets">Formations</h2>
             <div class="clientsdeux">
-                <a class="imageCollaborateur " href="https://www.liyanadev.fr/" target="_blank">
+                <a class="imageCollaborateur " href="https://www.liyanadev.fr/">
                     <img class="collab" src="./image/assistantenumerique.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
                     <h3 class="titreLienProjet">Formation Développeur Front-End</h3>
                     <p class="texteLienProjet">formation axée sur le développement front-end et l'utilisation de GitHub, centrée sur le projet de refonte complète de mon site web, destinée à un futur étudiant dans le cadre d'une reconversion professionnelle.</p>
