--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
-    <title>Assistante Numérique Freelance</title>
+    <title>Assistante Freelance</title>
     <link rel="icon" href="./image/faviconAss.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -44,7 +44,7 @@
                 <img class="sizeLogo spiner" src="./image/logoAss.svg" alt="logo">
             </div>
             <div id="titre" class="titre slideInTitle">
-                <h1 class="tailletitre">Assitante<br>Numérique Freelance</h1>
+                <h1 class="tailletitre">Assitante<br> Spécialiste du numérique</h1>
                 <h2 class="taillesoustitre">Confidentialité. Engagement. Valeur.</h2>
             </div>
         </header>
