--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="sizeLogo spiner" src="./image/logoAss.svg" alt="logo">
             </div>
             <div id="titre" class="titre slideInTitle">
-                <h1 class="tailletitre">Assitante<br> Spécialiste du numérique</h1>
+                <h1 class="tailletitre">Assistante<br> Spécialiste du numérique</h1>
                 <h2 class="taillesoustitre">Confidentialité. Engagement. Valeur.</h2>
             </div>
         </header>
@@ -54,8 +54,8 @@
                 <img class="photoprofile" src="./image/photoprofile.png" alt="photo de profile">
             </div>
             <div class="elementprofile">
-                <h2 id="titreElementProfile" class="titreElementProfile">Libérez votre <br>temps,engagez <br>l'assistance.</h2>
-                <p class="descriptionProfile">Libérez-vous du poids des tâches administratives !<br> Confiez-les à une assistante freelance dévouée pour <br>vous permettre de vous concentrer sur l'essentiel de <br> votre activité.</p>
+                <h2 id="titreElementProfile" class="titreElementProfile">Plus qu'une <br> simple Assistante! <br>Une spécialiste de <br>l'informatique.</h2>
+                <p class="descriptionProfile"> Expérience administrative renforcée.<br> Titulaire d'un diplôme en développement informatique. <br>Passionnée par le domaine du numérique.</p>
                 <div class="elementprofile2">
                     <a class="boutton" id="btnEnSavoirPlus" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
                     <a class="boutton" id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">></span></a>
