cohérence des textes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <header class="headerBody">
         <img src="image/iconMenu.svg" alt="icone d'accès au menu" class="iconMenu">
         <div class="sidebar">
-            <a class="elementheader" href="#home">Home</a>
-            <a class="elementheader" href="#profile">Profile</a>
+            <a class="elementheader" href="#home">Accueil</a>
+            <a class="elementheader" href="#profile">Profil</a>
             <a class="elementheader" href="#service">Services</a>
             <a class="elementheader" href="#clients">Formations</a>
             <a class="elementheader" href="#projets">Mes projets</a>
@@ -44,7 +44,7 @@
                 <img class="sizeLogo spiner" src="./image/logoAss.svg" alt="logo">
             </div>
             <div id="titre" class="titre slideInTitle">
-                <h1 class="tailletitre">Spécialiste<br> du numérique</h1>
+                <h1 class="tailletitre">Digital<br> Specialist</h1>
                 <h2 class="taillesoustitre">#Confidentialité #Engagement #Valeurs</h2>
             </div>
         </header>
@@ -54,8 +54,8 @@
                 <img class="photoprofile" src="./image/photoprofile.png" alt="photo de profile">
             </div>
             <div class="elementprofile">
-                <h2 id="titreElementProfile" class="titreElementProfile">Plus qu'une <br>une spécialiste de <br>l'informatique.<br>Une pro de l'administratif !</h2>
-                <p class="descriptionProfile"> Expérience administrative renforcée.<br> Titulaire d'un diplôme en développement informatique. <br>Passionnée par le domaine du numérique.</p>
+                <h2 id="titreElementProfile" class="titreElementProfile">Plus qu'une <br>une spécialiste de <br>l'informatique.<br>Un véritable couteau suisse !</h2>
+                <p class="descriptionProfile"> Passionnée par le domaine du numérique. <br>Titulaire d'un diplôme en développement informatique.<br> Expérience administrative renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
                 <div class="elementprofile2">
                     <a class="boutton" id="btnEnSavoirPlus" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
                     <a class="boutton" id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">></span></a>
@@ -93,9 +93,9 @@
                 </div>
 
 
-                <p class="textecitation"><em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial. <br> De plus, je vous conseille sur les outils numériques <br> les plus adaptés à votre activité pour maximiser votre efficacité </em>.</p>
+                <p class="textecitation"><em> En tant que spécialiste en solutions digitales, je suis votre partenaire pour optimiser votre présence en ligne et renforcer votre impact commercial. Grâce à une expertise pointue dans la gestion numérique, je vous propose des services complets, allant de la création de sites web professionnels au design moderne et orienté expérience utilisateur, jusqu'à l'exploitation des outils numériques les plus efficaces pour votre activité. Mon engagement est de vous fournir des conseils personnalisés sur ces outils ainsi que développer vos idéees, afin de maximiser votre efficacité et votre rentabilité. En collaborant avec moi, vous bénéficierez d'une approche sur mesure centrée sur vos besoins spécifiques, garantissant ainsi la transformation de vos ambitions en résultats tangibles dans cet univers digital en constante évolution.                </em>.</p>
                 <footer class="elementCitationDeux">
-                    <p>Votre future Assistante.</p>
+                    <p>Votre future partenaire.</p>
                 </footer>
             </blockquote>
         </section>
@@ -103,8 +103,7 @@
         <section class="enSavoirPlus">
             <div class="elementEnSavoirPus">
                 <h2 id="engagezLassistance" class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie!</h2>
-                <p class="soustitreEnSavoirPlus"><em>Êtes-vous prêt à libérer votre entreprise des contraintes administratives pour vous <br>concentrer sur la croissance? En tant que spécialiste numérique et administratif
-                    , je vous offre une <br>expertise pointue dans plusieurs domaines clés.</em></p>
+                <p class="soustitreEnSavoirPlus"><em>Êtes-vous prêt à libérer votre entreprise des contraintes administratives pour vous <br>concentrer sur la croissance? En tant que spécialiste Digital, je vous offre une <br>expertise pointue dans plusieurs domaines clés.</em></p>
             </div>
             <div class="description">
                 <div class="descriptionEnSavoirPlus">
@@ -114,9 +113,13 @@
                         <br>Saisie de documents.
                         <br>Gestion proactive des réclamations.
                         <br>Achats et Recouvrement.
+                        <br>Je connais l'ensemble des outils qui vous seront utiles, et je peux vous apporter un soutien ponctuel dans ce domaine.
+
                     </p>
-                    <h3 class="titreElementDescription">Contact Client et Formations <br>Personnalisées :</h3>
-                    <p class="texteElementDescription">Communication fluide et micro-<br>formations sur mesure pour vos <br>besoins spécifiques en accueil et <br>outils numérique tel que Excel, Power BI User, etc...</p>
+                    <h3 class="titreElementDescription">Service Client et Formations <br>Personnalisées :</h3>
+                    <p class="texteElementDescription">
+                        Communication fluide et microformations sur mesure pour vos besoins spécifiques en outils digitaux tels qu'Excel, Power BI, Adobe, IA, etc...
+                    </p>
                 </div>
                 <div>
                     <img class="imageElementDescription" src="./image/persofemme.png" alt="personnage feminin en animation">
@@ -132,11 +135,11 @@
                     <h3 class="titreElementDescriptionDeux">Gestion des Données :</h3>
                     <p class="texteElementDescriptionDeux">Transformez vos données en informations exploitables avec <br>des rapports clairs et précis. Optez pour des analyse <br>approfondie avec des tableaux de bord interactifs et une <br>organisation optimale des informations.</p>
                     <h3 class="titreElementDescriptionDeux">Polyvalence Informatique :</h3>
-                    <p class="texteElementDescriptionDeux">Créer votre site vitrine, vous orientez vers des outils<br>numériques pertinents. Créer vos contenus.<br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aiderons.</p>
+                    <p class="texteElementDescriptionDeux">Créer votre site web professionel, vous orienter vers des outils<br>numériques pertinents. Créer vos contenus.<br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aideront.</p>
                 </div>
             </div>
             <footer class="footerEnSavoirPlus">
-                <p>En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
+                <p>En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br> vous offrir une occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
                     <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</p>
             </footer>
         </section>
@@ -144,7 +147,11 @@
         <!-----------------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
         <section id="service" class="service">
             <div class="titreService">
-                <h2 class="titreservice">Solutions administratives sur mesure.</h2>
+                <h3 class="titreservice">
+                    Besoin d'un soutien administratif ponctuel ?
+
+                </h3>
+                <p class="textecitation"> Je vous propose des solutions administratives sur mesure et vous conseille sur la manière d'optimiser vos tâches.</p>
             </div>
             <div class="imageService">
                 <div class="listeService">
@@ -181,7 +188,7 @@
         <section id="clients" class="clients">
             <div class="titreClients">
                 <h2 id="titreCollab" class="titreclients">Besoin d’un accompagnement renforcé?</h2>
-                <p class="texteclients">Profitez de mon savoir faire et bénéfieciez d’un accompagnement renforcé sur de nombreux outils tel que EXCEL, PowerBI, <br>Office365</p>
+                <p class="texteclients">Profitez de mon savoir faire et bénéfieciez d’un accompagnement renforcé sur de nombreux outils tel que EXCEL, PowerBI, Office365, openAI, et bien d'autres encore !</p>
             </div>
             <div class="clientsdeux">
                 <div class="imageCollaborateur">
