--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         "Comment assurer la sécurité de mes données en ligne ?" 🔒
                     </p>
                 </div>
-                <p class="textecitation"><em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial. <br> De plus, je vous conseille sur les outils numériques <br> les plus adaptés à votre activité pour maximiser votre efficacité </em>.</p>
+                <p class="textecitation"><em> En tant que spécialiste en solutions digitales, je suis votre partenaire pour optimiser votre présence en ligne et renforcer votre impact commercial. Grâce à une expertise pointue dans la gestion numérique, je vous propose des services complets, allant de la création de sites web professionnels au design moderne et orienté expérience utilisateur, jusqu'à l'exploitation des outils numériques les plus efficaces pour votre activité. Mon engagement est de vous fournir des conseils personnalisés sur ces outils ainsi que développer vos idéees, afin de maximiser votre efficacité et votre rentabilité. En collaborant avec moi, vous bénéficierez d'une approche sur mesure centrée sur vos besoins spécifiques, garantissant ainsi la transformation de vos ambitions en résultats tangibles dans cet univers digital en constante évolution.                </em>.</p>
                 <footer class="elementCitationDeux">
                     <p>Votre future Assistante.</p>
                 </footer>
